Fixed some responsiveness to work good on mobiles

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -43,6 +43,7 @@
   opacity: 0.05;
   height: 70% !important;
   width: auto !important;
+  overflow: hidden;
 }
 
 /*************************
@@ -270,7 +271,6 @@ li {
   border-right: 1px solid #fff;
   border-bottom: 1px solid #fff;
   border-left: 1px solid #fff;
-  border-radius: 6px;
 
 }
 
