--- a/html/css/responsive.css
+++ b/html/css/responsive.css
@@ -47,6 +47,11 @@
     height: 60px;
   }
 
+  .about-icon-row div{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .whycons {
     padding-left: 20px;
     padding-right: 20px;
@@ -80,8 +85,16 @@
 
   .single-speaker {
     width: 100%
-    padding: 0% 10% 10% 10%;
-    margin: auto;
+    padding: 0% 10% 15% 10%;
+  }
+
+  .single-speaker h4{
+    margin-top: 10px;
+    margin-bottom: 0px;
+  }
+
+  .single-speaker h5{
+    margin-top: 5px;
   }
 
 }
@@ -104,6 +117,14 @@
 
   #home h3{
     letter-spacing: 10px;
+  }
+
+  #countdown h2 {
+    font-size: 2rem;
+  }
+
+  #countdown p {
+    font-size: 1rem;
   }
 
   .about-content {
